--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <div class="wrap">
       <section class="pagehead" aria-label="Page title and instructions">
         <h1>Online Forest Product Permits</h1>
-        <p>Select a state, BLM office, and product type to see available permits. Then choose a product, quantity, acknowledge required notices, and enter purchaser information—up to the Pay.gov handoff.</p>
+        <p>Purchase a permit to collect forest products on BLM-managed public lands.</p>
+        <p>Select a state, BLM office, and product type to begin.</p>
 
         <div class="alert" role="status" aria-live="polite">
           <div class="icon" aria-hidden="true">i</div>
