Add location-specific notices and documents

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             <div style="color:var(--muted); font-size:14px;">Choose one product to continue. Review details and required documents before proceeding.</div>
 
             <div class="summary" id="summary2"></div>
+            <div id="locationNotice" class="location-note" style="display:none;" aria-live="polite"></div>
             <div class="products" id="productList"></div>
 
             <div class="actions">
