Update Help section with link to Help page

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
 
         <aside class="card side" aria-label="Need help">
           <h3>Need help?</h3>
-          <p>Visit the Help page for quick answers and troubleshooting steps.</p>
+          <p>Visit the <a href="help.html">Help</a> page for quick answers and troubleshooting steps.</p>
           <ul>
             <li>If Pay.gov is unavailable, return later or pay at a local office.</li>
             <li>If you paid but did not receive a permit email, check spam or download from the confirmation page.</li>
