--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="icon" aria-hidden="true">i</div>
           <div class="txt">
             <strong>Notice</strong>
-            Pay.gov maintenance or email delays can interrupt checkout or permit delivery. If Pay.gov is down, try later or use the Help page for next steps. After paying, check spam folders for your permit email.
+            Pay.gov maintenance can interrupt checkout. If Pay.gov is down, try later or use the Help page for next steps.
           </div>
         </div>
       </section>
@@ -157,7 +157,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Select a product and quantity</button>
               <div class="step-status" id="status2">Locked</div>
             </div>
-            <div class="lock-note" id="step2LockNote">Complete step 1 to unlock product selection. Summary and heading stay available while locked.</div>
+            <div class="lock-note" id="step2LockNote">Complete step 1 to unlock product selection.</div>
             <div class="step-body" style="display:none;">
               <div style="color:var(--muted); font-size:14px;">Choose one product, then enter your quantity to continue.</div>
 
@@ -187,7 +187,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Agreements and purchaser information</button>
               <div class="step-status" id="status3">Locked</div>
             </div>
-            <div class="lock-note" id="step3LockNote">Complete step 2 to unlock agreements and purchaser information. Headings remain visible while locked.</div>
+            <div class="lock-note" id="step3LockNote">Complete step 2 to unlock agreements and purchaser information.</div>
             <div class="step-body" style="display:none;">
               <div style="color:var(--muted); font-size:14px;">Review the terms, provide your details, and continue to Pay.gov.</div>
 
@@ -288,7 +288,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
                 <div class="icon" aria-hidden="true">i</div>
                 <div class="txt">
                   <strong>Next step</strong>
-                  You will be sent to Pay.gov to complete payment. After payment, you will return here to download, save, and print your permit with a transaction reference we confirm server-side.
+                  You will be sent to Pay.gov to complete payment. After payment, you will return here to download, save, and print your permit.
                 </div>
               </div>
               <div class="actions" id="reviewActions" style="display:none; margin-top:6px;">
