--- a/help.html
+++ b/help.html
@@ -92,7 +92,7 @@
           <h3 style="margin-top:18px;">More help</h3>
           <ul>
             <li><a href="index.html">Return to the permit purchase page</a> to start a new selection.</li>
-            <li>Call your local BLM office for maps, closures, and in-person payment options.</li>
+            <li>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</li>
           </ul>
         </div>
       </section>
