--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
 
   <footer>
     <div class="wrap">
-      <div><strong>forestproducts.blm.gov</strong> — Prototype (single-file demo)</div>
+      <div><strong>forestproducts.blm.gov</strong> — Prototype</div>
       <div class="footer-links" aria-label="Footer links">
         <a href="https://www.doi.gov/" target="_blank" rel="noopener">Department of the Interior</a>
         <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About DOI.gov</a>
@@ -326,7 +326,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
         <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspector General</a>
         <a href="https://www.usa.gov/" target="_blank" rel="noopener">USA.gov</a>
       </div>
-      <div class="smallprint">Single-file functional prototype. Data shown is representative demo content.</div>
+      <div class="smallprint">Data shown is representative demo content.</div>
     </div>
   </footer>
   <script src="app.js" defer></script>
