--- a/help.html
+++ b/help.html
@@ -101,7 +101,7 @@
 
   <footer>
     <div class="wrap">
-      <div><strong>forestproducts.blm.gov</strong> — Prototype (single-file demo)</div>
+      <div><strong>forestproducts.blm.gov</strong> — Prototype</div>
       <div class="footer-links" aria-label="Footer links">
         <a href="https://www.doi.gov/" target="_blank" rel="noopener">Department of the Interior</a>
         <a href="https://www.doi.gov/about" target="_blank" rel="noopener">About DOI.gov</a>
@@ -109,7 +109,7 @@
         <a href="https://www.doioig.gov/" target="_blank" rel="noopener">Office of Inspector General</a>
         <a href="https://www.usa.gov/" target="_blank" rel="noopener">USA.gov</a>
       </div>
-      <div class="smallprint">Single-file functional prototype. Data shown is representative demo content.</div>
+      <div class="smallprint">Data shown is representative demo content.</div>
     </div>
   </footer>
 
