--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="bot">BUREAU OF LAND MANAGEMENT</div>
         </div>
         <div class="agency-actions">
-          <a href="help.html">Help</a>
+          <a href="#need-help">Help</a>
           <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">Contact</a>
         </div>
       </div>
@@ -77,15 +77,15 @@
           <div class="icon" aria-hidden="true">i</div>
           <div class="txt">
             <strong>Notice</strong>
-            Pay.gov maintenance can interrupt checkout. If Pay.gov is down, try later or use the Help page for next steps.
+            Pay.gov maintenance can interrupt checkout. If Pay.gov is down, try later or use the Need help section below for next steps.
           </div>
         </div>
       </section>
 
       <section class="stepper" aria-label="Purchase steps">
-        <div class="step active" id="s1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What, state, office</div></div></div>
-        <div class="step" id="s2"><div class="n">2</div><div><div class="t">Select</div><div class="k">Product + quantity</div></div></div>
-        <div class="step" id="s3"><div class="n">3</div><div><div class="t">Provide</div><div class="k">Agreements + purchaser info</div></div></div>
+        <button class="step active" id="s1" type="button" aria-controls="step1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What, state, office</div></div></button>
+        <button class="step" id="s2" type="button" aria-controls="step2"><div class="n">2</div><div><div class="t">Select</div><div class="k">Product + quantity</div></div></button>
+        <button class="step" id="s3" type="button" aria-controls="step3"><div class="n">3</div><div><div class="t">Provide</div><div class="k">Agreements + purchaser info</div></div></button>
       </section>
 
       <section class="layout" style="margin-top: 16px;">
@@ -219,12 +219,15 @@ Replace this demo text with the authoritative terms and conditions used by your 
 </div>
               </details>
 
-              <div class="grid2" style="margin-top:12px;">
-                <div class="row">
-                  <label><input type="checkbox" id="ackPrivacy" /> I have read and understand the Privacy Act notification.</label>
+              <div class="agreements" role="group" aria-label="Policy acknowledgements">
+                <div class="agreements-copy">
+                  <div class="eyebrow">Step 3</div>
+                  <div class="title">Review and accept</div>
+                  <p class="hint">Read the Privacy Act notice and Terms and Conditions, then check both boxes to continue.</p>
                 </div>
-                <div class="row">
-                  <label><input type="checkbox" id="ackTerms" /> I agree to the Terms and Conditions.</label>
+                <div class="agreements-list">
+                  <label class="checkline"><input type="checkbox" id="ackPrivacy" /> I have read and understand the Privacy Act notification.</label>
+                  <label class="checkline"><input type="checkbox" id="ackTerms" /> I agree to the Terms and Conditions.</label>
                 </div>
               </div>
 
@@ -243,10 +246,6 @@ Replace this demo text with the authoritative terms and conditions used by your 
                 <div class="row">
                   <label for="LastName">Last name <span aria-hidden="true" style="color:var(--danger)">*</span></label>
                   <input id="LastName" type="text" autocomplete="family-name" maxlength="50" />
-                </div>
-                <div class="row">
-                  <label for="Phone">Phone</label>
-                  <input id="Phone" type="tel" autocomplete="tel" placeholder="Optional" maxlength="20" />
                 </div>
 
                 <div class="row" style="grid-column: 1 / -1;">
@@ -300,13 +299,27 @@ Replace this demo text with the authoritative terms and conditions used by your 
           </section>
         </div>
 
-        <aside class="card side" aria-label="Need help">
+        <aside class="card side" aria-label="Need help" id="need-help">
           <h3>Need help?</h3>
-          <p>Visit the <a href="help.html">Help</a> page for quick answers and troubleshooting steps.</p>
-          <ul>
-            <li>If Pay.gov is unavailable, return later or pay at a local office.</li>
-            <li>If you paid but did not receive a permit email, check spam or download from the confirmation page.</li>
-            <li>Review maps and stipulations before purchase and before you travel.</li>
+          <div class="help-grid">
+            <div class="help-card">
+              <div class="eyebrow">Top issue</div>
+              <div class="help-title">Pay.gov outages</div>
+              <p>If Pay.gov is down, wait 15 minutes and try again. You can also complete your purchase at a local BLM office.</p>
+            </div>
+            <div class="help-card">
+              <div class="eyebrow">Troubleshooting</div>
+              <div class="help-title">Didn’t receive your permit?</div>
+              <p>After paying, download the permit from the confirmation page and check spam or junk mail for the email copy.</p>
+            </div>
+            <div class="help-card">
+              <div class="eyebrow">Selecting products</div>
+              <p>If an office shows no online permits for the collection type you chose, select another office or check back later. Some offices may pause online sales during seasonal closures.</p>
+            </div>
+          </div>
+          <ul class="help-links">
+            <li><a href="index.html">Return to the permit purchase page</a> to start a new selection.</li>
+            <li>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</li>
           </ul>
           <p style="margin-top:12px; color:var(--muted); font-size:13.5px;">
             This prototype stops at purchaser information collection and demonstrates the transaction payload that would be handed to Pay.gov.
