--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
       <section class="pagehead" aria-label="Page title and instructions">
         <h1>Online Forest Product Permits</h1>
         <p>Purchase a permit to collect forest products on BLM-managed public lands.</p>
-        <p>Choose what you’re collecting, then select the state and BLM office to begin.</p>
-        <p class="federal-note">Official U.S. Government Website — This permit is issued by the Bureau of Land Management.</p>
+        <p class="federal-note">This permit is issued by the Bureau of Land Management.</p>
         <div class="save-note" role="status" aria-live="polite">You can return to this page later to finish your permit.</div>
 
         <div class="alert" role="status" aria-live="polite">
@@ -331,9 +330,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
               <p>If an office shows no online permits for the collection type you chose, select another office or check back later. Some offices may pause online sales during seasonal closures.</p>
             </div>
           </div>
-          <ul class="help-links">
-            <li>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</li>
-          </ul>
+          <p>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</p>
         </aside>
       </section>
     </div>
