Update help text for online permit selection

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
             </div>
             <div class="help-card">
               <div class="eyebrow">Selecting products</div>
-              <p>If an office shows no online permits for the collection type you chose, select another office or check back later. Some offices may pause online sales during seasonal closures.</p>
+              <p>Only BLM offices that offer online permits for the collection type you selected are shown. If an office does not appear, it does not currently offer online permits for that collection type. Availability may change seasonally.</p>
             </div>
           </div>
           <p>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</p>
