--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </section>
 
       <section class="stepper" aria-label="Purchase steps">
-        <button class="step active" id="s1" type="button" aria-controls="step1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What, state, office</div></div></button>
+        <button class="step active" id="s1" type="button" aria-controls="step1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What, state, office</div></div><span class="step-pill" aria-hidden="true">Active</span></button>
         <button class="step" id="s2" type="button" aria-controls="step2"><div class="n">2</div><div><div class="t">Select</div><div class="k">Product + quantity</div></div><span class="step-pill" aria-hidden="true">Locked</span></button>
         <button class="step" id="s3" type="button" aria-controls="step3"><div class="n">3</div><div><div class="t">Provide</div><div class="k">Agreements + purchaser info</div></div><span class="step-pill" aria-hidden="true">Locked</span></button>
       </section>
@@ -104,7 +104,7 @@
           <!-- Step 1 -->
           <section id="step1" class="flow-step" aria-label="Step 1: Choose location">
             <div class="step-head">
-              <button class="step-toggle" type="button" aria-expanded="true">Find available products</button>
+              <button class="step-toggle" type="button" aria-expanded="true">Step 1 · Find available products</button>
               <div class="step-status" id="status1">In progress</div>
             </div>
             <div class="step-body">
@@ -155,7 +155,7 @@
           <!-- Step 2 -->
           <section id="step2" class="flow-step" aria-label="Step 2: Select product">
             <div class="step-head">
-              <button class="step-toggle" type="button" aria-expanded="false">Select a product and quantity</button>
+              <button class="step-toggle" type="button" aria-expanded="false">Step 2 · Select a product and quantity</button>
               <div class="step-status" id="status2">Locked</div>
             </div>
             <div class="lock-note" id="step2LockNote">Select what you’re collecting, then choose a state and BLM office to unlock product selection.</div>
@@ -187,7 +187,7 @@
           <!-- Step 3 -->
           <section id="step3" class="flow-step" aria-label="Step 3: Agreements and purchaser info">
             <div class="step-head">
-              <button class="step-toggle" type="button" aria-expanded="false">Agreements and purchaser information</button>
+              <button class="step-toggle" type="button" aria-expanded="false">Step 3 · Agreements and purchaser information</button>
               <div class="step-status" id="status3">Locked</div>
             </div>
             <div class="lock-note" id="step3LockNote">Choose a product and quantity to review agreements and enter purchaser information.</div>
