Revise Pay.gov maintenance notice in index.html
Updated notice about Pay.gov maintenance schedule.

--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
         <h1>Online Forest Product Permits</h1>
         <p>Purchase a permit to collect forest products on BLM-managed public lands.</p>
         <p class="federal-note">This permit is issued by the Bureau of Land Management.</p>
-        <div class="save-note" role="status" aria-live="polite">You can return to this page later to finish your permit.</div>
 
         <div class="alert" role="status" aria-live="polite">
           <div class="icon" aria-hidden="true">i</div>
           <div class="txt">
             <strong>Notice</strong>
-            Pay.gov maintenance can interrupt checkout. If Pay.gov is down, try later or use the Need help section below for next steps.
+            Pay.gov maintenance scheduled today from 4 PM to 8 PM mountain time can interrupt checkout. If Pay.gov is down, try again later.
           </div>
         </div>
       </section>
