Refactor help section to accordion layout
Updated the help section to use an accordion format for better user interaction.

--- a/index.html
+++ b/index.html
@@ -312,25 +312,121 @@ Replace this demo text with the authoritative terms and conditions used by your 
         </div>
 
         <aside class="card side" aria-label="Need help" id="need-help">
-          <h3>Need help?</h3>
-          <div class="help-grid">
-            <div class="help-card">
-              <div class="eyebrow">Top issue</div>
-              <div class="help-title">Pay.gov outages</div>
-              <p>If Pay.gov is down, wait 15 minutes and try again. You can also complete your purchase at a local BLM office.</p>
-            </div>
-            <div class="help-card">
-              <div class="eyebrow">Troubleshooting</div>
-              <div class="help-title">Didn’t receive your permit?</div>
-              <p>After paying, download the permit from the confirmation page and check spam or junk mail for the email copy.</p>
-            </div>
-            <div class="help-card">
-              <div class="eyebrow">Selecting products</div>
-              <p>Only BLM offices that offer online permits for the collection type you selected are shown. If an office does not appear, it does not currently offer online permits for that collection type. Availability may change seasonally.</p>
-            </div>
-          </div>
-          <p>Call your <a href="https://www.blm.gov/office/national-office">local BLM office</a> for maps, closures, and in-person payment options.</p>
-        </aside>
+  <h3>Need help?</h3>
+
+  <div class="help-accordion">
+
+    <details>
+      <summary>
+        <span class="eyebrow">Top issue</span>
+        <span class="help-title">Pay.gov outages</span>
+      </summary>
+      <p>
+        If Pay.gov is down, wait 15 minutes and try again. You can also complete
+        your purchase at a
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Troubleshooting</span>
+        <span class="help-title">I paid, but didn’t receive my permit</span>
+      </summary>
+      <p>
+        After completing payment, download your permit from the confirmation
+        page. A copy is also sent to the email address you provided. If you do not
+        see the email, check your spam or junk folder. Email delivery may take
+        several minutes.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Troubleshooting</span>
+        <span class="help-title">I closed the page or lost my permit after paying</span>
+      </summary>
+      <p>
+        This system does not support online permit lookup. If you cannot locate
+        your permit or confirmation email, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during business hours. Staff can help locate your permit using your
+        <strong>name and email address</strong>.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Troubleshooting</span>
+        <span class="help-title">My payment was declined or I received an error</span>
+      </summary>
+      <p>
+        Payment errors may occur due to bank restrictions, session timeouts, or
+        temporary Pay.gov issues. Verify your payment information and try again.
+        If the problem continues, wait a few minutes before retrying or contact
+        your bank for more information.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Troubleshooting</span>
+        <span class="help-title">I think I was charged twice</span>
+      </summary>
+      <p>
+        If you believe you were charged more than once, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during business hours. Be prepared to provide your name, email address,
+        and any payment confirmation information you received.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Troubleshooting</span>
+        <span class="help-title">I can’t download or open my permit</span>
+      </summary>
+      <p>Permits are provided as PDF files. If the file does not open:</p>
+      <ul>
+        <li>Make sure pop-up blockers are disabled</li>
+        <li>Try opening the file in a different browser or PDF viewer</li>
+        <li>Check your device’s download folder</li>
+      </ul>
+      <p>
+        If you are still unable to access your permit, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Selecting products and availability</span>
+        <span class="help-title">Office availability</span>
+      </summary>
+      <p>
+        Only BLM offices that offer online permits for the collection type you
+        selected are shown. If an office does not appear, it does not currently
+        offer online permits for that collection type. Availability may change
+        seasonally.
+      </p>
+    </details>
+
+    <details>
+      <summary>
+        <span class="eyebrow">Maps, closures, and local assistance</span>
+        <span class="help-title">Contact your local BLM office</span>
+      </summary>
+      <p>
+        For maps, collection area restrictions, seasonal closures, or in-person
+        payment options, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during regular business hours.
+      </p>
+    </details>
+
+  </div>
+</aside>
+
       </section>
     </div>
   </main>
