Refactor help section for better readability
Updated help section with improved formatting and clarity.

--- a/index.html
+++ b/index.html
@@ -311,117 +311,57 @@ Replace this demo text with the authoritative terms and conditions used by your 
           </section>
         </div>
 
-        <aside class="card side" aria-label="Need help" id="need-help">
+<aside class="card side" aria-label="Need help" id="need-help">
   <h3>Need help?</h3>
 
-  <div class="usa-accordion usa-accordion--multiselectable" aria-multiselectable="true">
-
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-paygov-outages"
-      >
-        <span class="eyebrow">Top issue</span>
-        <span class="help-title">Pay.gov outages</span>
-      </button>
-    </h4>
-    <div id="help-paygov-outages" class="usa-accordion__content usa-prose" hidden>
+  <div class="help-grid">
+    <div class="help-card">
+      <div class="eyebrow">Top issue</div>
+      <div class="help-title">Pay.gov outages</div>
       <p>
-        If Pay.gov is down, wait 15 minutes and try again. You can also complete your purchase at a
+        If Pay.gov is down, wait 15 minutes and try again. You can also complete
+        your purchase at a
         <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
       </p>
     </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-no-permit"
-      >
-        <span class="eyebrow">Troubleshooting</span>
-        <span class="help-title">I paid, but didn’t receive my permit</span>
-      </button>
-    </h4>
-    <div id="help-no-permit" class="usa-accordion__content usa-prose" hidden>
-      <p>
-        After completing payment, download your permit from the confirmation page. A copy is also sent to the email
-        address you provided. If you do not see the email, check your spam or junk folder. Email delivery may take
-        several minutes.
-      </p>
-    </div>
+    <div class="help-card">
+      <div class="eyebrow">Troubleshooting</div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-lost-permit"
-      >
-        <span class="eyebrow">Troubleshooting</span>
-        <span class="help-title">I closed the page or lost my permit after paying</span>
-      </button>
-    </h4>
-    <div id="help-lost-permit" class="usa-accordion__content usa-prose" hidden>
+      <div class="help-title">I paid, but didn’t receive my permit</div>
       <p>
-        This system does not support online permit lookup. If you cannot locate your permit or confirmation email,
-        contact your <a href="https://www.blm.gov/office/national-office">local BLM office</a> during business hours.
-        Staff can help locate your permit using your <strong>name and email address</strong>.
+        After completing payment, download your permit from the confirmation
+        page. A copy is also sent to the email address you provided. If you do
+        not see the email, check your spam or junk folder. Email delivery may
+        take several minutes.
       </p>
-    </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-payment-error"
-      >
-        <span class="eyebrow">Troubleshooting</span>
-        <span class="help-title">My payment was declined or I received an error</span>
-      </button>
-    </h4>
-    <div id="help-payment-error" class="usa-accordion__content usa-prose" hidden>
+      <div class="help-title">I closed the page or lost my permit after paying</div>
       <p>
-        Payment errors may occur due to bank restrictions, session timeouts, or temporary Pay.gov issues. Verify your
-        payment information and try again. If the problem continues, wait a few minutes before retrying or contact your
-        bank for more information.
+        This system does not support online permit lookup. If you cannot locate
+        your permit or confirmation email, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during business hours. Staff can help locate your permit using your
+        <strong>name and email address</strong>.
       </p>
-    </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-double-charge"
-      >
-        <span class="eyebrow">Troubleshooting</span>
-        <span class="help-title">I think I was charged twice</span>
-      </button>
-    </h4>
-    <div id="help-double-charge" class="usa-accordion__content usa-prose" hidden>
+      <div class="help-title">My payment was declined or I received an error</div>
+      <p>
+        Payment errors may occur due to bank restrictions, session timeouts, or
+        temporary Pay.gov issues. Verify your payment information and try again.
+        If the problem continues, wait a few minutes before retrying or contact
+        your bank for more information.
+      </p>
+
+      <div class="help-title">I think I was charged twice</div>
       <p>
         If you believe you were charged more than once, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a> during business hours. Be prepared to
-        provide your name, email address, and any payment confirmation information you received.
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during business hours. Be prepared to provide your name, email address,
+        and any payment confirmation information you received.
       </p>
-    </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-pdf"
-      >
-        <span class="eyebrow">Troubleshooting</span>
-        <span class="help-title">I can’t download or open my permit</span>
-      </button>
-    </h4>
-    <div id="help-pdf" class="usa-accordion__content usa-prose" hidden>
+      <div class="help-title">I can’t download or open my permit</div>
       <p>Permits are provided as PDF files. If the file does not open:</p>
       <ul>
         <li>Make sure pop-up blockers are disabled</li>
@@ -434,46 +374,27 @@ Replace this demo text with the authoritative terms and conditions used by your 
       </p>
     </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-availability"
-      >
-        <span class="eyebrow">Selecting products and availability</span>
-        <span class="help-title">Office availability</span>
-      </button>
-    </h4>
-    <div id="help-availability" class="usa-accordion__content usa-prose" hidden>
+    <div class="help-card">
+      <div class="eyebrow">Selecting products and availability</div>
       <p>
-        Only BLM offices that offer online permits for the collection type you selected are shown. If an office does
-        not appear, it does not currently offer online permits for that collection type. Availability may change
+        Only BLM offices that offer online permits for the collection type you
+        selected are shown. If an office does not appear, it does not currently
+        offer online permits for that collection type. Availability may change
         seasonally.
       </p>
     </div>
 
-    <h4 class="usa-accordion__heading">
-      <button
-        class="usa-accordion__button"
-        type="button"
-        aria-expanded="false"
-        aria-controls="help-maps-closures"
-      >
-        <span class="eyebrow">Maps, closures, and local assistance</span>
-        <span class="help-title">Contact your local BLM office</span>
-      </button>
-    </h4>
-    <div id="help-maps-closures" class="usa-accordion__content usa-prose" hidden>
+    <div class="help-card">
+      <div class="eyebrow">Maps, closures, and local assistance</div>
       <p>
-        For maps, collection area restrictions, seasonal closures, or in-person payment options, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a> during regular business hours.
+        For maps, collection area restrictions, seasonal closures, or in-person
+        payment options, contact your
+        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        during regular business hours.
       </p>
     </div>
-
   </div>
 </aside>
-
 
       </section>
     </div>
