--- a/index.html
+++ b/index.html
@@ -326,53 +326,80 @@ Replace this demo text with the authoritative terms and conditions used by your 
     </div>
 
     <div class="help-card">
-      <div class="eyebrow">Troubleshooting</div>
+  <div class="eyebrow">Troubleshooting</div>
 
-      <div class="help-title">I paid, but didn’t receive my permit</div>
-      <p>
-        After completing payment, download your permit from the confirmation
-        page. A copy is also sent to the email address you provided. If you do
-        not see the email, check your spam or junk folder. Email delivery may
-        take several minutes.
-      </p>
+  <details class="help-accordion">
+    <summary class="help-title">Payment and permit issues</summary>
 
-      <div class="help-title">I closed the page or lost my permit after paying</div>
-      <p>
-        This system does not support online permit lookup. If you cannot locate
-        your permit or confirmation email, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
-        during business hours. Staff can help locate your permit using your
-        <strong>name and email address</strong>.
-      </p>
+    <div class="help-accordion-body">
+      <details class="help-subaccordion">
+        <summary class="help-subtitle">I paid, but didn’t receive my permit</summary>
+        <div class="help-subaccordion-body">
+          <p>
+            After completing payment, download your permit from the confirmation
+            page. A copy is also sent to the email address you provided. If you
+            do not see the email, check your spam or junk folder. Email delivery
+            may take several minutes.
+          </p>
+        </div>
+      </details>
 
-      <div class="help-title">My payment was declined or I received an error</div>
-      <p>
-        Payment errors may occur due to bank restrictions, session timeouts, or
-        temporary Pay.gov issues. Verify your payment information and try again.
-        If the problem continues, wait a few minutes before retrying or contact
-        your bank for more information.
-      </p>
+      <details class="help-subaccordion">
+        <summary class="help-subtitle">I closed the page or lost my permit after paying</summary>
+        <div class="help-subaccordion-body">
+          <p>
+            This system does not support online permit lookup. If you cannot locate
+            your permit or confirmation email, contact your
+            <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+            during business hours. Staff can help locate your permit using your
+            <strong>name and email address</strong>.
+          </p>
+        </div>
+      </details>
 
-      <div class="help-title">I think I was charged twice</div>
-      <p>
-        If you believe you were charged more than once, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
-        during business hours. Be prepared to provide your name, email address,
-        and any payment confirmation information you received.
-      </p>
+      <details class="help-subaccordion">
+        <summary class="help-subtitle">My payment was declined or I received an error</summary>
+        <div class="help-subaccordion-body">
+          <p>
+            Payment errors may occur due to bank restrictions, session timeouts, or
+            temporary Pay.gov issues. Verify your payment information and try again.
+            If the problem continues, wait a few minutes before retrying or contact
+            your bank for more information.
+          </p>
+        </div>
+      </details>
 
-      <div class="help-title">I can’t download or open my permit</div>
-      <p>Permits are provided as PDF files. If the file does not open:</p>
-      <ul>
-        <li>Make sure pop-up blockers are disabled</li>
-        <li>Try opening the file in a different browser or PDF viewer</li>
-        <li>Check your device’s download folder</li>
-      </ul>
-      <p>
-        If you are still unable to access your permit, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
-      </p>
+      <details class="help-subaccordion">
+        <summary class="help-subtitle">I think I was charged twice</summary>
+        <div class="help-subaccordion-body">
+          <p>
+            If you believe you were charged more than once, contact your
+            <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+            during business hours. Be prepared to provide your name, email address,
+            and any payment confirmation information you received.
+          </p>
+        </div>
+      </details>
+
+      <details class="help-subaccordion">
+        <summary class="help-subtitle">I can’t download or open my permit</summary>
+        <div class="help-subaccordion-body">
+          <p>Permits are provided as PDF files. If the file does not open:</p>
+          <ul>
+            <li>Make sure pop-up blockers are disabled</li>
+            <li>Try opening the file in a different browser or PDF viewer</li>
+            <li>Check your device’s download folder</li>
+          </ul>
+          <p>
+            If you are still unable to access your permit, contact your
+            <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
+          </p>
+        </div>
+      </details>
     </div>
+  </details>
+</div>
+
 
     <div class="help-card">
       <div class="eyebrow">Selecting products and availability</div>
