Update federal note for permit issuance clarification

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="pagehead" aria-label="Page title and instructions">
         <h1>Online Forest Product Permits</h1>
         <p>Purchase a permit to collect forest products on BLM-managed public lands.</p>
-        <p class="federal-note">This permit is issued by the Bureau of Land Management.</p>
+        <p class="federal-note">Permits obtained through this site are issued by the Bureau of Land Management.</p>
 
         <div class="alert" role="status" aria-live="polite">
           <div class="icon" aria-hidden="true">i</div>
