--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
 
       <section class="stepper" aria-label="Purchase steps">
-        <button class="step active" id="s1" type="button" aria-controls="step1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What, state, office</div></div><span class="step-pill" aria-hidden="true">Active</span></button>
+        <button class="step active" id="s1" type="button" aria-controls="step1"><div class="n">1</div><div><div class="t">Choose</div><div class="k">What + where</div></div><span class="step-pill" aria-hidden="true">Active</span></button>
         <button class="step" id="s2" type="button" aria-controls="step2"><div class="n">2</div><div><div class="t">Select</div><div class="k">Product + quantity</div></div><span class="step-pill" aria-hidden="true">Locked</span></button>
         <button class="step" id="s3" type="button" aria-controls="step3"><div class="n">3</div><div><div class="t">Provide</div><div class="k">Agreements + purchaser info</div></div><span class="step-pill" aria-hidden="true">Locked</span></button>
       </section>
