--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="wrap">
       <section class="pagehead" aria-label="Page title and instructions">
         <h1>Online Forest Product Permits</h1>
-        <p>Purchase a permit to collect forest products on BLM-managed public lands.</p>
+        <p>Get a permit to collect forest products on BLM-managed public lands in a few simple steps.</p>
         <p class="federal-note">Permits obtained through this site are issued by the Bureau of Land Management.</p>
 
         <div class="alert" role="status" aria-live="polite">
