--- a/index.html
+++ b/index.html
@@ -113,18 +113,16 @@
 
               <div class="grid2" style="margin-top:14px;">
                 <div class="row" style="grid-column: 1 / -1;">
-                  <label for="ptype">What are you collecting? <span aria-hidden="true" style="color:var(--danger)">*</span></label>
-                  <select id="ptype" required>
-                    <option value="">Select what you’re collecting</option>
-                    <option value="fuelwood">Fuelwood</option>
-                    <option value="christmas">Christmas trees</option>
-                    <option value="mushrooms">Mushrooms</option>
-                  </select>
+                  <fieldset id="ptypeGroup" aria-required="true">
+                    <legend>What are you collecting? <span aria-hidden="true" style="color:var(--danger)">*</span></legend>
+                    <div class="hint">Select a product type to see available states.</div>
+                    <div class="ptype-grid" id="ptypeOptions"></div>
+                  </fieldset>
                 </div>
 
                 <div class="row">
                   <label for="state">State <span aria-hidden="true" style="color:var(--danger)">*</span></label>
-                  <select id="state" required>
+                  <select id="state" required disabled>
                     <option value="">Select a state</option>
                   </select>
                 </div>
@@ -135,7 +133,7 @@
                   <div class="combo" id="officeCombo">
                     <input id="officeInput" type="text" autocomplete="off" placeholder="Type to search offices"
                       role="combobox" aria-expanded="false" aria-controls="officeList" aria-autocomplete="list"
-                      aria-activedescendant="" aria-haspopup="listbox" />
+                      aria-activedescendant="" aria-haspopup="listbox" disabled />
                     <svg class="chev" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                       <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.06 1.06l-4.24 4.24a.75.75 0 01-1.06 0L5.21 8.29a.75.75 0 01.02-1.08z" clip-rule="evenodd"/>
                     </svg>
