Add target and rel attributes to BLM office links

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
       <p>
         If Pay.gov is down, wait 15 minutes and try again. You can also complete
         your purchase at a
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>.
       </p>
     </div>
 
@@ -348,7 +348,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           <p>
             This system does not support online permit lookup. If you cannot locate
             your permit or confirmation email, contact your
-            <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
             during business hours. Staff can help locate your permit using your
             <strong>name and email address</strong>.
           </p>
@@ -372,7 +372,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
         <div class="help-subaccordion-body">
           <p>
             If you believe you were charged more than once, contact your
-            <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
             during business hours. Be prepared to provide your name, email address,
             and any payment confirmation information you received.
           </p>
@@ -390,7 +390,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
           </ul>
           <p>
             If you are still unable to access your permit, contact your
-            <a href="https://www.blm.gov/office/national-office">local BLM office</a>.
+            <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>.
           </p>
         </div>
       </details>
@@ -414,7 +414,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
       <p>
         For maps, collection area restrictions, seasonal closures, or in-person
         payment options, contact your
-        <a href="https://www.blm.gov/office/national-office">local BLM office</a>
+        <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BLM office</a>
         during regular business hours.
       </p>
     </div>
