Update hint text for policy acknowledgements

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
                 <div class="agreements-copy">
                   <div class="eyebrow">Step 3</div>
                   <div class="title">Review and accept</div>
-                  <p class="hint">Read the summaries below. You can open the full text before acknowledging.</p>
+                  <p class="hint">Read the following summaries. You can open the full text before acknowledging.</p>
                 </div>
                 <div class="agreements-list">
                   <label class="checkline"><input type="checkbox" id="ackPrivacy" />
@@ -237,7 +237,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
                 </div>
               </div>
 
-              <p class="hint" id="purchaserBlockedHint" style="margin-top:10px;">Customer contact information will unlock after you agree to both statements above.</p>
+              <p class="hint" id="purchaserBlockedHint" style="margin-top:10px;">You must agree to both statements above to continue.</p>
 
               <fieldset id="purchaserFieldset" class="purchaser-block locked" aria-describedby="purchaserBlockedHint" disabled>
               <div class="grid2" style="margin-top:14px;">
