--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
               <button class="step-toggle" type="button" aria-expanded="false">Step 3 · Agreements and purchaser information</button>
               <div class="step-status" id="status3">Locked</div>
             </div>
+            ‹div class="lock-note" id="step3LockNote"›Choose a product and quantity to review agreements and enter purchaser information.</div>
             <div class="step-body" style="display:none;">
-              <div style="color:var(--muted); font-size:14px;">Review the terms, provide your details, and continue to Pay.gov.</div>
 
               <details id="privacyDetail">
                 <summary>Privacy Act Notification</summary>
