--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Step 3 · Agreements and purchaser information</button>
               <div class="step-status" id="status3">Locked</div>
             </div>
-            ‹div class="lock-note" id="step3LockNote"›Choose a product and quantity to review agreements and enter purchaser information.</div>
+            <div class="lock-note" id="step3LockNote">Choose a product and quantity to review agreements and enter purchaser information.</div>
             <div class="step-body" style="display:none;">
 
               <details id="privacyDetail">
