--- a/index.html
+++ b/index.html
@@ -185,14 +185,12 @@
 
               <div class="agreements" role="group" aria-label="Policy acknowledgements">
                 <div class="agreements-copy">
-                  <div class="eyebrow">Step 3</div>
                   <div class="title">Review and accept</div>
-                  <p class="hint">Read the following summaries. You can open the full text before acknowledging.</p>
                 </div>
                 <div class="agreements-list">
                   <div class="agreement-item">
                     <label class="checkline"><input type="checkbox" id="ackPrivacy" />
-                      I understand how my information will be used (Privacy Act).
+                      I understand how my information will be used.
                     </label>
                     <details id="privacyDetail">
                       <summary>Privacy Act Notification</summary>
@@ -210,7 +208,7 @@ EFFECT OF NOT PROVIDING INFORMATION: Providing the requested information is volu
                   </div>
                   <div class="agreement-item">
                     <label class="checkline"><input type="checkbox" id="ackTerms" />
-                      I understand the rules for this permit (Terms and Conditions).
+                      I understand the rules for this permit.
                     </label>
                     <details id="termsDetail">
                       <summary>Terms and Conditions</summary>
