--- a/index.html
+++ b/index.html
@@ -14,18 +14,7 @@
     <div class="wrap">
       <div class="inner">
         <div class="flag" aria-hidden="true">
-          <svg viewBox="0 0 190 100" width="18" height="12" preserveAspectRatio="none">
-            <rect width="190" height="100" fill="#b22234"></rect>
-            <g fill="#fff">
-              <rect y="7.69" width="190" height="7.69"></rect>
-              <rect y="23.07" width="190" height="7.69"></rect>
-              <rect y="38.46" width="190" height="7.69"></rect>
-              <rect y="53.84" width="190" height="7.69"></rect>
-              <rect y="69.23" width="190" height="7.69"></rect>
-              <rect y="84.61" width="190" height="7.69"></rect>
-            </g>
-            <rect width="76" height="53.85" fill="#3c3b6e"></rect>
-          </svg>
+          <img src="logos/URE_flag.png" alt="" />
         </div>
         <div class="meta">An official site of the United Regions of Elsewhere</div>
         <button type="button" id="bannerToggle" aria-expanded="false" aria-controls="bannerDetails">Here’s how you know</button>
@@ -53,7 +42,10 @@
   <div class="agency-bar" role="banner">
     <div class="wrap">
       <div class="row">
-        <div class="seal" aria-hidden="true">MOT</div>
+        <div class="agency-logos" aria-hidden="true">
+          <img class="agency-logo mot" src="logos/MOT_logo.png" alt="" />
+          <img class="agency-logo bwl" src="logos/BWL_logo.png" alt="" />
+        </div>
         <div class="agency-title" aria-label="United Regions of Elsewhere Ministry of Outside Things, Bureau of Wandering Lands">
           <div class="top">MINISTRY OF OUTSIDE THINGS</div>
           <div class="bot">BUREAU OF WANDERING LANDS</div>
