Remove lock notes and enhance accessibility
Updated lock notes to be empty and added ARIA attributes for accessibility.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Step 2 · Select a product and quantity</button>
               <div class="step-status" id="status2">Locked</div>
             </div>
-            <div class="lock-note" id="step2LockNote">Select what you’re collecting, then choose a state and BWL office to unlock product selection.</div>
+            <div class="lock-note" id="step2LockNote" aria-live="polite" aria-atomic="true"></div>
             <div class="step-body" style="display:none;">
 
               <div id="locationNotice" class="location-note" style="display:none;" aria-live="polite"></div>
@@ -171,7 +171,7 @@
               <button class="step-toggle" type="button" aria-expanded="false">Step 3 · Agreements and purchaser information</button>
               <div class="step-status" id="status3">Locked</div>
             </div>
-            <div class="lock-note" id="step3LockNote">Choose a product and quantity to review agreements and enter purchaser information.</div>
+            <div class="lock-note" id="step3LockNote" aria-live="polite" aria-atomic="true"></div>
             <div class="step-body" style="display:none;">
 
               <div class="agreements" role="group" aria-label="Policy acknowledgements">
