Update hint text for purchaser information

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
                 </div>
               </div>
 
-              <div class="hint" id="purchaserBlockedHint" style="display:none;">Check both acknowledgement boxes above to enter purchaser information.</div>
+              <div class="hint" id="purchaserBlockedHint" style="display:none;">Check all acknowledgement boxes above to enter purchaser information.</div>
 
               <fieldset id="purchaserFieldset" class="purchaser-block locked" aria-describedby="purchaserBlockedHint" disabled>
               <div class="grid2" style="margin-top:14px;">
