--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Replace this demo text with the authoritative terms and conditions used by your 
     <div class="help-card">
       <div class="eyebrow">Local help</div>
       <p>
-        If you need help with anything not available through this site—contact your
+        If you are unable to complete your purchase online, or need assistance with options not available through this site, contact your
         <a href="https://www.blm.gov/office/national-office" target="_blank" rel="noopener">local BWL office</a>
         during regular business hours.
       </p>
